# ripple-energy

./: .gitignore  .gitlab-ci.yml  LICENSE.txt  README.md  pyproject.toml  renovate.json  test.py
src/ripple_energy/: __about__.py  __init__.py  constants.py  exceptions.py  helpers.py  models.py  ripple_energy.py
src/ripple_energy/graphql/: gql_types.py  mutation.graphql  query.graphql
src/ripple_energy/graphql_client/: __init__.py  active_coop_status.py  all_coops.py  async_base_client.py  authenticate.py  base_model.py  client.py  consumption.py  coop.py  coop_timeline_progression.py  cumulative_savings.py  deauthenticate.py  enums.py  exceptions.py  faqs.py  fragments.py  get_active_coop_status.py  get_coop.py  get_coop_timeline_progression.py  get_insights_chart_data.py  get_member.py  input_types.py  insights_chart_data.py  me.py  member.py  monthly_savings.py  refresh_token.py  scalars.py  token_auth.py  tribe_url.py  verify.py  verify_token.py  version.py  wind_farm_generation.py  wind_farm_generation_data.py
src/ripple_energy/graphql_queries/: README.md  coop.graphql  get_active_coop_status.graphql  get_coop.graphql  get_member.graphql  me.graphql  member.graphql
src/ripple_energy/graphql_queries/custom_fragments/: consumption.graphql  coop.graphql  waiting_list_place.graphql
src/ripple_energy/graphql_queries/custom_mutations/: deauthenticate.graphql
src/ripple_energy/graphql_queries/custom_queries/: all_coops.graphql  consumption.graphql  coop.graphql  insights_chart.graphql  member.graphql  wind_farm_generation.graphql
src/ripple_energy/graphql_queries/fragments/: member.graphql  waiting_list.graphql
src/ripple_energy/graphql_queries/mutations/: token_auth.graphql
src/ripple_energy/graphql_queries/standard_mutations/: authenticate.graphql  refresh_token.graphql  verify_token.graphql
src/ripple_energy/graphql_queries/standard_queries/: active_coop_status.graphql  coop_timeline_progression.graphql  cumulative_savings.graphql  faqs.graphql  monthly_savings.graphql  tribe_url.graphql  version.graphql
tests/: __init__.py
