[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ripple-energy"
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "daniel", email = "daniel.edward.george.hitchcock@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "requests~=2.31.0",
  "pydantic~=2.0.3",
  "typing"
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/unknown/ripple-energy#readme"
Issues = "https://github.com/unknown/ripple-energy/issues"
Source = "https://github.com/unknown/ripple-energy"

[template.plugins.default]
src-layout = true

[tool.hatch.version]
path = "ripple_energy/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=ripple_energy --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "ripple_energy/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
