[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ripple-energy"
description = 'Python Module For Ripple Energy'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Daniel Hitchcock", email = "daniel.edward.george.hitchcock@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "ariadne-codegen~=0.9.0"
]
dynamic = ["version"]

[project.optional-dependencies]
checks = ["hatch"]

[project.urls]
Documentation = "https://github.com/danieledwardgeorgehitchcock/ripple-energy#readme"
Issues = "https://github.com/danieledwardgeorgehitchcock/ripple-energy/issues"
Source = "https://github.com/danieledwardgeorgehitchcock/ripple-energy"

[tool.hatch.version]
path = "src/ripple_energy/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=ripple_energy --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[tool.hatch.envs.checks]
dependencies = [
  "black",
  "ruff",
]

[tool.hatch.envs.checks.scripts]
lint = ["black --check --diff {args:.}", "ruff check {args:.}"]
format = ["black {args:.}", "ruff --fix --exit-non-zero-on-fix {args:.}"]

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "src/ripple_energy/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ariadne-codegen]
plugins = ["ariadne_codegen.contrib.shorter_results.ShorterResultsPlugin"]
remote_schema_url = "https://rippleenergy.com/graphql"
queries_path = "src/ripple_energy/graphql_queries"
target_package_path = "src/ripple_energy"
include_comments = false
